--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     }
     
     /* ============================================
-       HERO SECTION
+       HERO SECTION COMMENT
        ============================================ */
     .hero{
       display:grid;
