--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="fr">
 <head>
+  <link rel="icon" type="image/png" href="favicon.png">
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJN7P64YY8"></script>
 <script>
