--- a/index.html
+++ b/index.html
@@ -693,7 +693,9 @@
   <header>
     <div class="container nav">
       <div class="brand">
-        <div class="logo" aria-hidden="true">TS</div>
+        <div class="logo" aria-hidden="true">
+  <img src="favicon.png" alt="Logo Tawjih Strategy" width="40" height="40">
+</div>
         <div class="brand-text">
           <h1>Tawjih Strategy</h1>
           <p class="tagline">We design strategies, you lead success</p>
