--- a/index.html
+++ b/index.html
@@ -1,6 +1,19 @@
 <!doctype html>
 <html lang="fr">
 <head>
+<meta property="og:title" content="Tawjih Strategy | Bureau d’accompagnement stratégique en Algérie">
+<meta property="og:description" content="Tawjih Strategy transforme la stratégie de votre entreprise en actions concrètes et mesurables. Découvrez nos services pour PME en Algérie.">
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://mahmoudsemperfi.github.io/tawjih-strategy/">
+<meta property="og:image" content="https://mahmoudsemperfi.github.io/tawjih-strategy/favicon1.png">
+<meta property="og:locale" content="fr_FR">
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:site" content="@Tawjihstrategy">
+<meta name="twitter:creator" content="@Tawjihstrategy">
+<meta name="twitter:title" content="Tawjih Strategy | Bureau d’accompagnement stratégique en Algérie">
+<meta name="twitter:description" content="Tawjih Strategy transforme la stratégie de votre entreprise en actions concrètes et mesurables. Découvrez nos services pour PME en Algérie.">
+<meta name="twitter:image" content="https://mahmoudsemperfi.github.io/tawjih-strategy/favicon1.png">
+
   <link rel="icon" type="image/png" href="favicon.png">
   <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-JJN7P64YY8"></script>
