--- a/index.html
+++ b/index.html
@@ -1208,7 +1208,7 @@
         <div style="margin-top:32px;padding-top:32px;border-top:1px solid var(--border)">
           <h4 style="color:var(--blue);margin:0 0 16px">Informations de contact</h4>
           <p style="font-size:14px;color:var(--text-light);margin:8px 0">
-            <strong>Adresse :</strong> Cité 5000 Logements B56 N°8, Sidi Abdellah, Mahelma, Alger, Algérie
+            <strong>Adresse :</strong> Sidi Abdellah, Mahelma, Alger, Algérie
           </p>
           <p style="font-size:14px;color:var(--text-light);margin:8px 0">
             <strong>Email :</strong> mahmoud.semperfi@gmail.com
